# graffiti

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/include/graffiti/: Bitmap.hpp  CanvasModel.hpp  SprayBrush.hpp  UndoStack.hpp
core/src/: Bitmap.cpp  CanvasModel.cpp  SprayBrush.cpp  UndoStack.cpp
mac/Graffiti/: AppDelegate.swift  CanvasView.swift  Info.plist  ToolbarController.swift
mac/Graffiti/Bridging/: CoreBridge.h  CoreBridge.mm
scripts/: build_core.sh
